# hyprland-preview-share-picker

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  flake.nix  package.nix  rustfmt.toml  shell.nix
hyprland-preview-share-picker-protocols/: Cargo.toml
hyprland-preview-share-picker-protocols/src/: lib.rs
hyprland-screen-picker-protocols/: Cargo.toml
hyprland-screen-picker-protocols/src/: buffer.rs  output.rs
hyprland-share-picker-protocols/: Cargo.toml
hyprland-share-picker-protocols/src/: frame.rs  lib.rs  output.rs
hyprland-share-picker-protocols/src/protocols/: hyprland_toplevel_export_v1.rs
lib/: Cargo.toml  README.md
lib/src/: buffer.rs  frame.rs  image.rs  lib.rs  output.rs  toplevel.rs
src/: app.rs  buffer.rs  cli.rs  config.rs  frame.rs  image.rs  main.rs  output.rs  toplevel.rs  util.rs
src/protocols/: hyprland_toplevel_export_v1.rs  mod.rs
src/views/: mod.rs  outputs.rs  region.rs  windows.rs
