[package]
name = "hyprland-screen-picker"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.5"
log = "0.4.25"
hyprland-screen-picker-protocols = { path = "./hyprland-screen-picker-protocols" }
wayland-client = "0.31.8"
hyprland = "0.4.0-beta.1"
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
toml = "0.8.19"
gtk4 = "0.9.5"
gtk4-layer-shell = "0.4.0"
