[package]
name = "hyprland-share-picker-protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.8.0"
log = "0.4.25"
memfd = "0.6.4"
wayland-backend = "0.3.8"
wayland-client = "0.31.8"
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
wayland-scanner = "0.31.6"
